Source/JavaScriptCore/b3/B3Validate.cpp
@@ -337,6 +337,7 @@ public:
                     switch (value->as<PatchpointValue>()->resultConstraint.kind()) {
                     case ValueRep::WarmAny:
                     case ValueRep::SomeRegister:
+                    case ValueRep::SomeEarlyRegister:
                     case ValueRep::Register:
                     case ValueRep::StackArgument:
                         break;
@@ -345,7 +346,7 @@ public:
                         break;
                     }
                     
-                    validateStackmapConstraint(value, ConstrainedValue(value, value->as<PatchpointValue>()->resultConstraint));
+                    validateStackmapConstraint(value, ConstrainedValue(value, value->as<PatchpointValue>()->resultConstraint), ConstraintRole::Def);
                 }
                 validateStackmap(value);
                 break;
@@ -432,7 +433,11 @@ private:
             validateStackmapConstraint(stackmap, child);
     }
     
-    void validateStackmapConstraint(Value* context, const ConstrainedValue& value)
+    enum class ConstraintRole {
+        Use,
+        Def
+    };
+    void validateStackmapConstraint(Value* context, const ConstrainedValue& value, ConstraintRole role = ConstraintRole::Use)
     {
         switch (value.rep().kind()) {
         case ValueRep::WarmAny:
@@ -440,6 +445,9 @@ private:
         case ValueRep::LateColdAny:
         case ValueRep::SomeRegister:
         case ValueRep::StackArgument:
+            break;
+        case ValueRep::SomeEarlyRegister:
+            VALIDATE(role == ConstraintRole::Def, ("At ", *context, ": ", value));
             break;
         case ValueRep::Register:
         case ValueRep::LateRegister:
